[project]
name = "hyperiv"
version = "1.0.0"
description = "HyperIV: Real-time Implied Volatility Smoothing"
readme = "README.md"
requires-python = "==3.10.12"
dependencies = [
    "ipywidgets==8.1.5",
    "notebook==7.3.1",
    "numpy==2.1.3",
    "pandas==2.2.3",
    "tables==3.10.1",
    "plotly==5.24.1",
    "scipy==1.14.1",
    "torch-geometric==2.6.1",
    "torch==2.5.1",
    "tqdm==4.67.1"
]
